# ResourceSystem

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  main.cpp
example/: test.cpp
example/assets/shaders/: testV.glsl
example/exampleResourceClass/: exampleResource.cpp  exampleResource.h
include/Resource/: Resource.h
include/ResourceHandle/: ResourceHandle.h
include/ResourceManager/: ResourceManager.h  ResourceManager.inl
src/ResourceManager/: ResourceSpecializations.cpp
